--- a/rancid/configure.ac
+++ b/rancid/configure.ac
@@ -48,9 +48,9 @@ AC_C_STRINGIZE
 # check includes/headers
 AC_HEADER_STDC
 AC_CHECK_HEADERS(ctype.h errno.h fcntl.h libutil.h limits.h pty.h malloc.h \
-		 memory.h siginfo.h string.h strings.h stropts.h \
-		 sys/resource.h sys/types.h sys/wait.h sysexits.h unistd.h \
-		 util.h wait.h)
+		 memory.h siginfo.h stdarg.h stdint.h stdlib.h string.h \
+		 strings.h stropts.h sys/resource.h sys/types.h sys/wait.h \
+		 sysexits.h unistd.h util.h wait.h)
 
 # check functions
 AC_CHECK_FUNCS(asprintf memcpy memmove memset strerror strchr \
