--- a/rancid/lib/rancid.pm.in
+++ b/rancid/lib/rancid.pm.in
@@ -96,11 +96,10 @@ sub rancidinit {
     }
 
     # determine community string filtering mode
-    if (defined($ENV{"NOCOMMSTR"}) &&
-	($ENV{"NOCOMMSTR"} =~ /yes/i || $ENV{"NOCOMMSTR"} =~ /^$/)) {
-	$filter_commstr = 1;
-    } else {
+    if (defined($ENV{"NOCOMMSTR"}) && $ENV{"NOCOMMSTR"} =~ /no/i) {
 	$filter_commstr = 0;
+    } else {
+	$filter_commstr = 1;
     }
     # determine oscillating data filtering mode
     if (defined($ENV{"FILTER_OSC"}) && $ENV{"FILTER_OSC"} =~ /no/i) {
